<resources>
    <string name="app_name">BukuPr2</string>
    <string name="buku_pr">Buku PR</string>
    <string name="email">Email</string>
    <string name="hint_email">youremail@example.com</string>
    <string name="password">Password</string>
    <string name="hint_pasword">Must have at least 6 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="LogIn">Log In</string>
    <string name="SignUp">Sign up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_to_your_account">Login to your account!</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="or_sign_in_with">Or sign in with</string>
</resources>